add Allure report